istio-teaching/release/whole/istio-ingressgateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: istio-ingressgateway
spec:
  host: istio-ingressgateway
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: shop_session-id
          ttl: 0s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-ingressgateway
spec:
  hosts:
  - "myshop-1.demo"
  gateways:
  - demo-01/frontend-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: istio-ingressgateway
